--- a/index.html
+++ b/index.html
@@ -71,6 +71,49 @@
                 </div>
             </div>
         </section>
+        <section class="games">
+            <div class="content flex-spbt-center">
+                <div class="games-aovivo">
+                    <h2>Ao<br>vivo</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="img/SK 1.png" alt="Logo do time 1">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/FLA 1 (1).png" alt="Logo do time 2">
+                            <p>FLA</p>
+                        </div>
+                    </div>
+                </div><!--fim games aovivo -->
+                <div class="games-embreve">
+                    <h2>Em<br>Breve</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>INTZ</p>
+                            <img src="img/logo intz.png" alt="Logo do time 1">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/logo keyd.png" alt="Logo do time 2">
+                            <p>KEYD</p>
+                        </div>
+                    </div>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="img/SK 1.png" alt="Logo do time 1">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/logo intz.png" alt="Logo do time 2">
+                            <p>INTZ</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
