Notícias, Proximas partidas e footer finalizados

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     </div>
                 </div>
         </section>
+    </main>
         <section class="games">
             <div class="content flex-spbt-center">
                 <ul class="flex-spbt-center">
@@ -114,9 +115,160 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+        <section class="news">
+            <h2>Noticias</h2>
+            <div class="content-news">
+                <div class="news-news">
+                    <div class="bloco-news">
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia3.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia2.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia1.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bloco-news">
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia6.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia4.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                        <div class="news-bloco">
+                            <div class="imagem-bloco">
+                                <img src="img/capa-noticia5.png" alt="Capa da noticia">
+                            </div>
+                            <div class="text-bloco">
+                                <h3>Titulo da noticia</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-tabela">
+                    <div class="tabela-news">
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                        <div class="team-tabela">
+                            <div class="placar-tabela">
+                                <p>SK</p>
+                                <img src="img/SK 1.png" alt="Logo do time Sk">
+                                <p>VS</p>
+                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
+                                <p>FLA</p>
+                            </div>
+                            <p>1/12/2020 19:00</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <footer>
+        <div class="footer content">
+            <div class="footer-flex">
+                <div class="footer-links">
+                    <ul>
+                        <li><h3>links úteis</h3></li>
+                            <li><a href="#">início</li> 
+                            <li><a href="#">horários</a></li>
+                            <li><a href="#">Campeonatos</a></li>
+                            <li><a href="#">Resultados</a></li>
+                            <li><a href="#">notícias</a></li>
+                    </ul>
+                </div>
+                <div class="footer-img">
+                    <img src="img/logo.svg" alt="Logo E-Players">
+                    <p>Todos os Direitos reservados a <span><a href="https://github.com/Marcosrobertto">Marcos Roberto</a></span> © 2020</p>
+                </div>
+                <div class="footer-direitos">
+                    <a href="#">Ajuda</a>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
