--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-    
+
     <header class="header-top">
         <div class="content flex-spbt-center">
             <img src="img/logo.svg" alt="Logo E-Players">
@@ -22,38 +24,38 @@
                     <li><a href="#">Cadastro/Login</a></li>
                 </ul>
                 <a href="#" id="menu-bars">
-                <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars"></i>
                 </a>
             </nav>
         </div>
     </header>
     <main>
         <section class="banner">
-                <picture>
-                    <source media="(max-width: 90em)" srcset="img/Banner1440.jpg"> 
-                    <img src="img/Banner1920.jpg" alt="Pilotos de Formula 1, Hamilton, riccardo, Vetel, Verstapen">
-                </picture>
-                <div class="banner-container">
-                    <div class="banner-content">
-                        <div class="banner-text">
-                            <h1>Liga E-Players</h1>
-                            <p>O maior portal de campeonatos online</p>
-                            <a href="#">Inscreva-se</a>
-                        </div>
+            <picture>
+                <source media="(max-width: 90em)" srcset="img/Banner1440.jpg">
+                <img src="img/Banner1920.jpg" alt="Pilos de Formula 1, Hamilton, riccardo, Vetel, Verstapen">
+            </picture>
+            <div class="banner-container">
+                <div class="banner-content">
+                    <div class="banner-text">
+                        <h1>Liga E-Players</h1>
+                        <p>O Maior portal de campeonatos online</p>
+                        <a href="#">Inscreva-se</a>
                     </div>
                 </div>
+            </div>
         </section>
-    </main>
         <section class="games">
             <div class="content flex-spbt-center">
                 <ul class="flex-spbt-center">
-                    <li><a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo da Formula 1"></a></li>
-                    <li><a href="#"><img src="img/logo-lol-300x131 1.png" alt=""></a></li>
-                    <li><a href="#"><img src="img/Counter-Strike-Logo-Transparent-PNG 1.png" alt="Logo de League of Legends"></a></li>
-                    <li><a href="#"><img src="img/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo de Counter Strike"></a></li>
+                    <li><a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo da formula 1"></a></li>
+                    <li><a href="#"><img src="img/logo-lol-300x131 1.png" alt="Logo de League of Legends"></a></li>
+                    <li><a href="#"><img src="img/Counter-Strike-Logo-Transparent-PNG 1.png"
+                                alt="Logo do Counter Strike"></a></li>
+                    <li><a href="#"><img src="img/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo do Valorant"></a>
+                    </li>
                     <li><a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo do FIFA"></a></li>
                 </ul>
-
             </div>
         </section>
         <section class="about">
@@ -63,19 +65,24 @@
             <div class="container-about">
                 <div class="content-about">
                     <div class="text-about">
-                    <h2>Como participar das Ligas?</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the .
-                    <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen boook.</p>
+                        <h2>Como participar das ligas?</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not only five
+                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                            It was popularised in the .<br>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley of type and scrambled it to make a type specimen boook.</p>
                     </div>
                     <img src="img/lol.png" alt="Personagem Ezreal, do game League of Legends">
                 </div>
             </div>
-        </section>
+        </section><!--Fim About-->
         <section class="games">
-            <div class="content flex-spbt-center">
+            <div class="content flex-spar-center">
                 <div class="games-aovivo">
-                    <h2>Ao<br>vivo</h2>
+                    <h2>Ao<br>Vivo</h2>
                     <div class="partida">
                         <div class="time1">
                             <p>SK</p>
@@ -83,22 +90,23 @@
                         </div>
                         <p>VS</p>
                         <div class="time2">
-                            <img src="img/FLA 1 (1).png" alt="Logo do time 2">
+                            <img src="img/FLA 1 (1).png" alt="Logo time 2">
                             <p>FLA</p>
                         </div>
                     </div>
-                </div><!--fim games aovivo -->
-                <div class="games-embreve">
-                    <h2>Em<br>Breve</h2>
-                    <div class="partida">
-                        <div class="time1">
-                            <p>INTZ</p>
-                            <img src="img/logo intz.png" alt="Logo do time 1">
+                </div><!--fim games aovivo-->
+                <div class="linha"></div>
+                   <div class="games-embreve">
+                       <h2>Em<br>Breve</h2>
+                       <div class="partida">
+                           <div class="time1">
+                            <p>SK</p>
+                            <img src="img/SK 1.png" alt="Logo do time 1">
                         </div>
                         <p>VS</p>
                         <div class="time2">
-                            <img src="img/logo keyd.png" alt="Logo do time 2">
-                            <p>KEYD</p>
+                            <img src="img/FLA 1 (1).png" alt="Logo time 2">
+                            <p>FLA</p>
                         </div>
                     </div>
                     <div class="partida">
@@ -108,143 +116,15 @@
                         </div>
                         <p>VS</p>
                         <div class="time2">
-                            <img src="img/logo intz.png" alt="Logo do time 2">
-                            <p>INTZ</p>
+                            <img src="img/FLA 1 (1).png" alt="Logo time 2">
+                            <p>FLA</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!-- Fim parte de games -->
 
-        <section class="news">
-            <h2>Noticias</h2>
-            <div class="content-news">
-                <div class="news-news">
-                    <div class="bloco-news">
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia3.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia2.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia1.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bloco-news">
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia6.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia4.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                        <div class="news-bloco">
-                            <div class="imagem-bloco">
-                                <img src="img/capa-noticia5.png" alt="Capa da noticia">
-                            </div>
-                            <div class="text-bloco">
-                                <h3>Titulo da noticia</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="content-tabela">
-                    <div class="tabela-news">
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                        <div class="team-tabela">
-                            <div class="placar-tabela">
-                                <p>SK</p>
-                                <img src="img/SK 1.png" alt="Logo do time Sk">
-                                <p>VS</p>
-                                <img src="img/FLA 1 (1).png" alt="Logo do time Flamengo">
-                                <p>FLA</p>
-                            </div>
-                            <p>1/12/2020 19:00</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+    </main>
     <footer>
         <div class="footer content">
             <div class="footer-flex">
