Seção Notícia/Próximas Partidas Atualizado

--- a/index.html
+++ b/index.html
@@ -123,7 +123,148 @@
                 </div>
             </div>
         </section><!-- Fim parte de games -->
+        <div class="bg-news">
+            <div class="content flex-spbt-center">
+                <section class="news">
+                    <h2>Notícias</h2>
+                    <div class="content-news">
+                        <div class="cardnews">
+                            <img src="img/capa-noticia1.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/capa-noticia2.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/capa-noticia3.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/capa-noticia4.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/capa-noticia5.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/capa-noticia6.png" alt="Foto dos jogadores">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure debitis enim! Quasi illum asperiores dolorem reiciendis commodi, ipsum deleniti velit.</p>
+                        </div>
+                    </div>
+                </section>
+                <aside class="next-games">
+                    <h2>Próximos Jogos</h2>
+                    <div class="next-games-bg">
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>SK</p>
+                                    <img src="img/SK 1.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/FLA 1 (1).png" alt="Logo do Time">
+                                    <p>FLA</p>
+                                </div>
+                            </div><!--Fim Teams-->
+                            <p>03/12/2020 19:00</p>
+                        </div><!--Fim Games Match-->
 
+                </aside>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer content">
