--- a/index.html
+++ b/index.html
@@ -266,27 +266,42 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer content">
-            <div class="footer-flex">
-                <div class="footer-links">
+    <footer class="rodape">
+        <div class="content flex-spbt-center">
+            <div class="links-footer">
+                <div class="links">
+                    <h3>links úteis</h3>
                     <ul>
-                        <li><h3>links úteis</h3></li>
-                            <li><a href="#">início</li> 
-                            <li><a href="#">horários</a></li>
-                            <li><a href="#">Campeonatos</a></li>
-                            <li><a href="#">Resultados</a></li>
-                            <li><a href="#">notícias</a></li>
+                        <li><a href="#">Regras de utilização</li> 
+                        <li><a href="#">Suporte</a></li>
+                        <li><a href="#">Central de Ajuda</a></li>
+                        <li><a href="#">Contatos</a></li>
                     </ul>
                 </div>
-                <div class="footer-img">
-                    <img src="img/logo.svg" alt="Logo E-Players">
-                    <p>Todos os Direitos reservados a <span><a href="https://github.com/Marcosrobertto">Marcos Roberto</a></span> © 2020</p>
+                <div class="links">
+                    <h3>Páginas</h3>
+                    <ul>
+                        <li><a href="#">início</li> 
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Notícias</a></li>
+                        <li><a href="#">Login/Cadastro</a></li>
+                    </ul>
                 </div>
-                <div class="footer-direitos">
-                    <a href="#">Ajuda</a>
-                    <a href="#">Sobre</a>
-                    <a href="#">Contato</a>
+            </div>
+                <img class="logo-rodape" src="img/logo.svg" alt="Logo E-Players">
+                <!-- <p>Todos os Direitos reservados a <span><a href="https://github.com/Marcosrobertto">Marcos Roberto</a></span> © 2020</p> -->
+            <div class="sociais">
+                <h2>Faça parte do nosso clan, receba notícias e promoções!</h2>
+                <form action="">
+                    <input type="email" placeholder="E-mail">
+                    <input type="submit" value="Cadastrar">
+                </form> 
+                <div class="siga-nos">
+                    <h2>Siga-nos em:</h2>
+                    <a href="#"><img src="img/Logo Instagram.png" alt="Logo do Instagram"></a>
+                    <a href="#"><img src="img/Logo Facebook.png" alt="Logo do Facebbok"></a>
+                    <a href="#"><img src="img/Logo YouTube.png" alt="Logo do Youtube"></a>
                 </div>
             </div>
         </div>
