--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
+    <!-- <script src="https://kit.fontawesome.com/8b8849d995.js" crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -23,9 +23,9 @@
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Cadastro/Login</a></li>
                 </ul>
-                <a href="#" id="menu-bars">
+                <!-- <a href="#">
                     <i class="fas fa-bars"></i>
-                </a>
+                </a> -->
             </nav>
         </div>
     </header>
@@ -82,7 +82,7 @@
         <section class="games">
             <div class="content flex-spar-center">
                 <div class="games-aovivo">
-                    <h2>Ao<br>Vivo</h2>
+                    <h2>Ao Vivo</h2>
                     <div class="partida">
                         <div class="time1">
                             <p>SK</p>
@@ -97,7 +97,7 @@
                 </div><!--fim games aovivo-->
                 <div class="linha"></div>
                    <div class="games-embreve">
-                       <h2>Em<br>Breve</h2>
+                       <h2>Em Breve</h2>
                        <div class="partida">
                            <div class="time1">
                             <p>SK</p>
