--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="https://kit.fontawesome.com/8b8849d995.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/8b8849d995.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -16,16 +16,17 @@
         <div class="content flex-spbt-center">
             <img src="img/logo.svg" alt="Logo E-Players">
             <nav class="menu">
-                <ul class="flex-spbt-center">
+                <ul class="flex-spbt-center" class="meusLinks" >
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Campeonatos</a></li>
                     <li><a href="#">Resultados</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Cadastro/Login</a></li>
                 </ul>
-                <!-- <a href="#">
+                <a href="#">
                     <i class="fas fa-bars"></i>
-                </a> -->
+                </a>
+                
             </nav>
         </div>
     </header>
